--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 					<h4>My favorite color is purple.</h4>
 					<h4>My favorite food is macaroni & cheese.</h4>
 					<h4>If I could be any animal, I would be a cat.</h4>
+                    <p>Cats are the best! cute and fluffy!</p>
 			</div>
 		  </body>
 		</html>
